[FIX] : dropdown invisible bug fix

--- a/styles/meta.scss
+++ b/styles/meta.scss
@@ -264,7 +264,9 @@ $mobile_font_resize_size: 3px;
 
 @mixin container {
     .main_col {
-        overflow: hidden;
+        @include mobile {
+            overflow: hidden;
+        }
     }
     @media only screen and (max-width: 600px) {
         display: flex;
